fin construction (reste fignolage et traductions)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@ class: left, hide_logo
 background-image: url("img/background.png")
 background-size: cover
 
-### Strengths-based interventions in schools: A first trial in inclusive context with 11-12 y.o. children
+### Strengths-based interventions in schools:
+### A first trial in inclusive context with 11-12 y.o. children
 
 <div>
 <style type="text/css">.xaringan-extra-logo {
@@ -96,7 +97,7 @@ top:31.5em;right:9em;
 
 .pull-left[
 
-&lt;img src="img/logos/logo-hepvs.png" width="50%" /&gt;&lt;img src="img/logos/logo-ema.png" width="50%" /&gt;&lt;img src="img/logos/logo-unifr.png" width="50%" /&gt;&lt;img src="img/logos/logo-cheers.png" width="50%" /&gt;&lt;img src="img/logos/logo-unidistance.png" width="50%" /&gt;&lt;img src="img/logos/logo-lyon2.png" width="50%" /&gt;
+&lt;img src="img/logos/logo-hepvs.png" width="45%" /&gt;&lt;img src="img/logos/logo-ema.png" width="45%" /&gt;&lt;img src="img/logos/logo-unifr.png" width="45%" /&gt;&lt;img src="img/logos/logo-cheers.png" width="45%" /&gt;&lt;img src="img/logos/logo-unidistance.png" width="45%" /&gt;&lt;img src="img/logos/logo-lyon2.png" width="45%" /&gt;
 
 
 ]
@@ -124,31 +125,27 @@ background-size: cover
 
 --
 
-1. Le cas des forces de caractère
+1. The case of character strengths
 
 --
 
-1. Dispositif prévu (matériel, coeur, N, etc)
+1. Teaching device
 
 --
 
-1. Intervention (raconter)
+1. Intervention
 
 --
 
-1. Résultats (commenter)
+1. Results
 
 --
 
-1. Perspectives 
+1. Prospects 
 
 --
 
-1. Montrer les premières images du matériel pour le POC...
-
---
-
-1. Divers.
+1. Next steps
 
 ---
 class: middle, title-slide, inverse
@@ -157,16 +154,17 @@ background-size: cover
 
 # Background
 
-## Quels enjeux ?
+### Challenges
 
-## Quelles opportunités ?
+### Opportunities
 
 ---
 class: top
 background-image: url("img/background.png")
 background-size: cover
 
-### Background : enjeux
+### Background
+### Challenges
 
 --
 
@@ -184,17 +182,16 @@ class: top
 background-image: url("img/background.png")
 background-size: cover
 
-### Background : quelles Opportunités de la PP
+### Background
+### Opportunities
 
 --
 
-- schémas IBE PGA et moi qui est déjà en anglais 
-- schémas PGA et moi dans CSPS. en mettant en anglais
+&lt;div class="center"&gt;
 
-Studies suggest that the ability to create and maintain positive relationships between students plays one of the biggest roles in inclusive classrooms.
+&lt;img src="img/background-1.jpg" width="35%" /&gt;
 
-
-&lt;img src="img/bressoud_gay_2022.jpg" width="45%" /&gt;
+&lt;/div&gt;
 
 [(Bressoud &amp; Gay, 2022)](https://szh-shop.faros.ch/cms/Artikel-Detail/67565?itemID=REV2022_03)
 
@@ -204,7 +201,7 @@ class: middle, title-slide, inverse
 background-image: url("https://images.unsplash.com/photo-1471286174890-9c112ffca5b4?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=2338&amp;q=80")
 background-size: cover
 
-# Développer une culture des forces
+# Develop a culture of character strengths
 
 ---
 
@@ -212,7 +209,7 @@ class: top
 background-image: url("img/background.png")
 background-size: cover
 
-### Développer une culture des forces !
+### Develop a culture of character strengths
 
 --
 
@@ -232,13 +229,18 @@ In this context, strengths can be a very powerful vehicle to establish a greater
 
 ---
 
-class: center
+class: top
 background-image: url("img/background.png")
 background-size: cover
 
-#### Développer une culture des forces
+### Develop a culture of character strengths
 
-&lt;img src="img/9.png" width="100%" /&gt;
+&lt;div class="center"&gt;
+
+&lt;img src="img/forces-1.png" width="80%" /&gt;
+
+&lt;/div&gt;
+
 [(Bressoud et al., 2019)](https://orfee.hepl.ch/handle/20.500.12162/4159)
 
 ---
@@ -246,46 +248,35 @@ class: title-slide, middle, inverse
 background-image: url("https://images.unsplash.com/photo-1523726491678-bf852e717f6a?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1740&amp;q=80")
 background-size: cover
 
-# Dispositif
-
+# Teaching Device
 
 ---
-class: top
+class: left
 background-image: url("img/background.png")
 background-size: cover
 
-### Dispositif
+### Teaching Device
 
 --
-raconter, montrer des images de ce qui est PREVU. Datas du contexte. Classe pilote. matériel.
-
-Quelles variables DV et IV.
-
----
-class: left
-background-image: url("img/background.png")
-background-size: cover
-
-### Dispositif
 
 .pull-left[
-Une pédagogie en 5 étapes pour faire émerger et utiliser des **ressources personnelles** au sein du groupe [(Linkins et al., 2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
+Based on the following five steps proposed by  [Linkins et al. (2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
 
-1. Connaître le vocabulaire des forces
+1. Developing a character strengths language
 
-1. Identifier les forces des autres
+1. Recognizing and thinking about strengths in others
 
-1. Identifier ses propres forces
+1. Recognizing and thinking about one’s own strengths
 
-1. Utiliser ses propres forces dans de nouveaux contextes
+1. Practicing and applying strengths
 
-1. Identifier et célébrer les forces du groupe
+1. Identifying, celebrating, and cultivating group strengths
 
 ]
 
 .pull-right[
 
-&lt;img src="img/1.jpg" width="90%" /&gt;
+&lt;img src="img/dispo-1.jpg" width="90%" /&gt;
 
 ]
 
@@ -294,26 +285,25 @@ class: left
 background-image: url("img/background.png")
 background-size: cover
 
-### Dispositif
+### Teaching Device
 
 .pull-left[
-Une pédagogie en 5 étapes pour faire émerger et utiliser des **ressources personnelles** au sein du groupe [(Linkins et al., 2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
+Based on the following five steps proposed by  [Linkins et al. (2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
 
-1. Connaître le vocabulaire des forces
+1. Developing a character strengths language
 
-1. Identifier les forces des autres
+1. Recognizing and thinking about strengths in others
 
-1. Identifier ses propres forces
+1. Recognizing and thinking about one’s own strengths
 
-1. Utiliser ses propres forces dans de nouveaux contextes
+1. Practicing and applying strengths
 
-1. Identifier et célébrer les forces du groupe
+1. Identifying, celebrating, and cultivating group strengths
 
 ]
-
 .pull-right[
 
-&lt;img src="img/2.jpg" width="80%" /&gt;
+&lt;img src="img/dispo-2.jpg" width="80%" /&gt;
 
 ]
 
@@ -322,26 +312,26 @@ class: left
 background-image: url("img/background.png")
 background-size: cover
 
-### Dispositif
+### Teaching Device
 
 .pull-left[
-Une pédagogie en 5 étapes pour faire émerger et utiliser des **ressources personnelles** au sein du groupe [(Linkins et al., 2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
+Based on the following five steps proposed by  [Linkins et al. (2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
 
-1. Connaître le vocabulaire des forces
+1. Developing a character strengths language
 
-1. Identifier les forces des autres
+1. Recognizing and thinking about strengths in others
 
-1. Identifier ses propres forces
+1. Recognizing and thinking about one’s own strengths
 
-1. Utiliser ses propres forces dans de nouveaux contextes
+1. Practicing and applying strengths
 
-1. Identifier et célébrer les forces du groupe
+1. Identifying, celebrating, and cultivating group strengths
 
 ]
 
 .pull-right[
 
-&lt;img src="img/3.jpg" width="60%" /&gt;
+&lt;img src="img/dispo-3.jpg" width="60%" /&gt;
 
 ]
 
@@ -350,26 +340,26 @@ class: left
 background-image: url("img/background.png")
 background-size: cover
 
-### Dispositif
+### Teaching Device
 
 .pull-left[
-Une pédagogie en 5 étapes pour faire émerger et utiliser des **ressources personnelles** au sein du groupe [(Linkins et al., 2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
+Based on the following five steps proposed by  [Linkins et al. (2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
 
-1. Connaître le vocabulaire des forces
+1. Developing a character strengths language
 
-1. Identifier les forces des autres
+1. Recognizing and thinking about strengths in others
 
-1. Identifier ses propres forces
+1. Recognizing and thinking about one’s own strengths
 
-1. Utiliser ses propres forces dans de nouveaux contextes
+1. Practicing and applying strengths
 
-1. Identifier et célébrer les forces du groupe
+1. Identifying, celebrating, and cultivating group strengths
 
 ]
 
 .pull-right[
 
-&lt;img src="img/4.jpg" width="60%" /&gt;
+&lt;img src="img/dispo-4.jpg" width="60%" /&gt;
 
 ]
 
@@ -378,26 +368,26 @@ class: left
 background-image: url("img/background.png")
 background-size: cover
 
-### Dispositif
+### Teaching Device
 
 .pull-left[
-Une pédagogie en 5 étapes pour faire émerger et utiliser des **ressources personnelles** au sein du groupe [(Linkins et al., 2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
+Based on the following five steps proposed by  [Linkins et al. (2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
 
-1. Connaître le vocabulaire des forces
+1. Developing a character strengths language
 
-1. Identifier les forces des autres
+1. Recognizing and thinking about strengths in others
 
-1. Identifier ses propres forces
+1. Recognizing and thinking about one’s own strengths
 
-1. Utiliser ses propres forces dans de nouveaux contextes
+1. Practicing and applying strengths
 
-1. Identifier et célébrer les forces du groupe
+1. Identifying, celebrating, and cultivating group strengths
 
 ]
 
 .pull-right[
 
-&lt;img src="img/5.jpg" width="100%" /&gt;
+&lt;img src="img/dispo-5.jpg" width="100%" /&gt;
 
 ]
 
@@ -406,26 +396,26 @@ class: left
 background-image: url("img/background.png")
 background-size: cover
 
-### Dispositif
+### Teaching Device
 
 .pull-left[
-Une pédagogie en 5 étapes pour faire émerger et utiliser des **ressources personnelles** au sein du groupe [(Linkins et al., 2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
+Based on the following five steps proposed by  [Linkins et al. (2015)](https://www.tandfonline.com/doi/abs/10.1080/17439760.2014.888581) :
 
-1. Connaître le vocabulaire des forces
+1. Developing a character strengths language
 
-1. Identifier les forces des autres
+1. Recognizing and thinking about strengths in others
 
-1. Identifier ses propres forces
+1. Recognizing and thinking about one’s own strengths
 
-1. Utiliser ses propres forces dans de nouveaux contextes
+1. Practicing and applying strengths
 
-1. Identifier et célébrer les forces du groupe
+1. Identifying, celebrating, and cultivating group strengths
 
 ]
 
 .pull-right[
 
-&lt;img src="img/6.jpg" width="70%" /&gt;
+&lt;img src="img/dispo-6.jpg" width="70%" /&gt;
 
 ]
 
@@ -446,9 +436,19 @@ background-size: cover
 
 --
 
-Method: Qualitative data were collected in a pilot class of 11 to 12-year-old Swiss students including a child on the autism spectrum. Students’ perceptions of peer relatedness were gathered via computerized open-ended questionnaires at the end of the intervention.
+- Year 2016-2017
 
-Montrer combien, comment, par qui, exemples de ce qui s'est passé.
+- 10-12 y.o. children
+
+- 24 pupils (12 &amp;#9792;)
+
+- Special needs : ASD, child psychiatric intervention, psychological care, high potential
+
+- T1 (october 2016) and T2 (april 2017) completed by 14 children
+
+- semi-experimental method
+    - IV : time effect
+    - DV : psychological WB, Social support, school environment
 
 ---
 class: title-slide, middle, inverse
@@ -458,6 +458,40 @@ background-size: cover
 # Results
 
 ---
+
+class: left center
+background-image: url("img/background.png")
+background-size: cover
+
+### Results
+### Social support
+
+&lt;img src="img/results-1.png" width="60%" /&gt;
+
+---
+
+class: left center
+background-image: url("img/background.png")
+background-size: cover
+
+### Results
+### psychological WB
+
+&lt;img src="img/results-2.png" width="60%" /&gt;
+
+---
+
+class: left center
+background-image: url("img/background.png")
+background-size: cover
+
+### Results
+### School environment
+
+&lt;img src="img/results-3.png" width="60%" /&gt;
+
+---
+
 class: top
 background-image: url("img/background.png")
 background-size: cover
@@ -466,43 +500,53 @@ background-size: cover
 
 --
 
-Results highlight that the students were strongly satisfied with this strength-based intervention. This intervention helped children identify their peers through competences rather than weaknesses.
-Thus, they felt that peer relationships were enhanced by strength activities.
+- MAR :
+    - « j’ai trouvé excellent »
+    - « je me suis senti bien mieux »
+    - « je n’avais jamais pensé à certaines de mes forces »
+    - « je crois que je m’entends mieux avec les autres »
+    - «  le travail sur les forces permet aux gens de se mettre ensemble et de se protéger les uns les autres »
 
-plots
+--
 
-commenter.
+- KEN :
+    - « ça sert à montrer qu’on a tous quelque chose de bien »
+    - « Pour moi, je ne veux pas dire »
+    - «  je sais pas »
+    - « le bonheur est une illusion »
+
 
 ---
 
-class: left center
+class: top
 background-image: url("img/background.png")
 background-size: cover
 
 ### Results
 
-&lt;img src="img/7.png" width="60%" /&gt;
+--
 
----
+- GUI :
+    - « On se rend compte qu’on a tous des forces et que personne n’est mauvais »
+    - « Pour bien s’entendre, je comprends l’importance de ne pas se moquer »
 
-class: left center
-background-image: url("img/background.png")
-background-size: cover
+--
 
-### Results
-
-&lt;img src="img/8.png" width="60%" /&gt;
-
+- NOR :
+    - « apprendre à voir qu’on est tous différents »
+    - « je me suis sentie heureuse en faisant cela »
+    - « ça améliore un tout petit peu l’ambiance »
 
 ---
 class: title-slide, middle, inverse
 background-image: url("https://images.unsplash.com/photo-1446769357257-5aa1b1bfcd65?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=2940&amp;q=80")
 background-size: cover
 
-# Perspectives
+# What we learned and where we go
 
-## de manière générale
-## le rôle des enseignants
+### General
+### Towards a feasibility study (POC)
+### The role of teachers
 
 ---
 class: top
@@ -510,36 +554,60 @@ background-image: url("img/background.png")
 background-size: cover
 
 ### Perspectives
+### General
 
 --
 
-We will discuss perspectives on research and strength-based pedagogical activities. In inclusive classrooms, strengths interventions seem to play a crucial role in students’ positive relationships which is believed to have impacts on well-being, academic achievement, decrease of bullying.
-
-Il faut être prudent mais les acteurs veulent qu'on continue.
-
-Alors POC de Anais et Laetitia et montrer de images de comment on a donné du CORPS az programme pour booster les effets.
-
-PEut-être sortir des données de Laetitia pour montrer qu'on doit aller plus loin ???
-
----
-class:top
-background-image: url("img/background.png")
-background-size: cover
-
-### Perspectives : le matériel ne suffit pas !
-
---
-
-Formation des profs.
-
-Prochain design ?
+- Séquence plus longue
+- S’intégrer dans al vie de la classe
+- Offrir des opportunités d’adaptation par les profs
+- Garantir un cadre
+- Entraîner nos mécanismes attentionnels
 
 ---
 class: top
 background-image: url("img/background.png")
 background-size: cover
 
-### Perspectives: towards a POC
+### Perspectives
+### Towards a proof of concept
+
+--
+
+.pull-left[
+Un boîte d’activité contient :
+- 1 plateau de jeu de 20 cases
+- 1 poster des 24 forces
+- 30 cartes défis
+- 24 cartes des forces
+- 1 dossier de matériel complémentaire
+- 1 guide de l’enseignant·e
+]
+
+.pull-right[
+
+&lt;div class ="center"&gt;
+&lt;img src="img/perspectives-1.png" width="70%" /&gt;
+&lt;/div&gt;
+
+]
+
+---
+class:top
+background-image: url("img/background.png")
+background-size: cover
+
+### Perspectives
+### The role of teachers
+
+--
+
+- Les croyances et pratiques des enseignant·es ont un impact sur les élèves et leurs apprentissages
+- La conception de l’intelligence, chez les enseignant·es, a des effets sur les résultats des élèves
+- La conception du métier est un élément central de l’efficacité pédagogique
+- Les méthodes ne sont pas intrinsèquement efficaces
+
+e.g., [Hattie (2009)](https://www.researchgate.net/publication/270585193_Visible_Learning_A_Synthesis_of_Over_800_Meta-Analyses_Relating_to_Achievement), [Bressoux (2001)](https://www.researchgate.net/publication/267747865_Reflexions_sur_l'effet-maitre_et_l'etude_des_pratiques_enseignantes), [Elmore (1997)](https://files.eric.ed.gov/fulltext/ED429264.pdf)
 
 ---
 class: title-slide, middle, inverse, hide-logo
@@ -549,11 +617,16 @@ background-size: cover
 # Next steps
 
 ---
-class: top
+class: middle
 background-image: url("img/background.png")
 background-size: cover
 
 ### Next steps
+
+- September 2022
+- Control group : 4-6 classes
+- Experimental group (teacher training and teaching tools) : 4-6 classes
+- 10-12 lessons over 3 months
 
 ---
 
