ajout logo hepl, taille image pga nbr

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ top:31.5em;right:9em;
 
 .pull-left[
 
-&lt;img src="img/logos/logo-hepvs.png" width="45%" /&gt;&lt;img src="img/logos/logo-ema.png" width="45%" /&gt;&lt;img src="img/logos/logo-unifr.png" width="45%" /&gt;&lt;img src="img/logos/logo-cheers.png" width="45%" /&gt;&lt;img src="img/logos/logo-unidistance.png" width="45%" /&gt;&lt;img src="img/logos/logo-lyon2.png" width="45%" /&gt;
+&lt;img src="img/logos/logo-hepvs.png" width="40%" /&gt;&lt;img src="img/logos/logo-ema.png" width="40%" /&gt;&lt;img src="img/logos/logo-unifr_crop.png" width="40%" /&gt;&lt;img src="img/logos/logo-cheers.png" width="40%" /&gt;&lt;img src="img/logos/logo-hepl.png" width="40%" /&gt;&lt;img src="img/logos/logo-unidistance.png" width="40%" /&gt;&lt;img src="img/logos/logo-lyon2.png" width="40%" /&gt;
 
 
 ]
@@ -187,7 +187,7 @@ background-size: cover
 
 &lt;div class="center"&gt;
 
-&lt;img src="img/background-1-gb.jpg" width="35%" /&gt;
+&lt;img src="img/background-1-gb.jpg" width="45%" /&gt;
 
 &lt;/div&gt;
 
