--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ background-size: cover
 
 --
 
-### The case of character strengths
+### Developing a culture of character strengths
 
 --
 
@@ -174,7 +174,7 @@ Schools in Switzerland:
 
 - Inclusive policies (special needs)
 
-* Switzerland believes in promoting inclusive settings for SEN pupils. It is a duty to work with children and teens potential and put wellbeing first in school environments and organization.* (see: [edk.ch](https://edudoc.ch/record/87690/files/Sonderpaed_f.pdf))
+- Switzerland believes in promoting inclusive settings for SEN pupils. It is a duty to work with children and teens potential and put wellbeing first in school environments and organization. (see: [edk.ch](https://edudoc.ch/record/87690/files/Sonderpaed_f.pdf))
 ---
 class: top
 background-image: url("img/background.png")
